# tournament-app

./: .flake8  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
backend/: app.py  database.py
backend/alembic/: env.py
backend/alembic/versions/: 213da07a7009_added_user_and_player_tables.py  236311d5941d_add_initial_tables_for_team_signups.py  2a71122f630e_add_initial_data.py  30849a82f5eb_initial_models.py  415d3e4f3612_added_token_table.py  5ca19196e7ea_tourney_and_matches.py
backend/graphql/: __init__.py
backend/graphql/schema/: match.py  player.py  stats.py  table.py  team.py  tournament.py  types.py  user.py
backend/middleware/: statistics.py
backend/middleware/auth/: __init__.py  token_db.py  twilio.py
backend/models/: __init__.py  active_match.py  enums.py  player.py  shared.py  table.py  team.py  team_membership.py  token.py  tournament.py  tournament_entry.py  tournament_match.py  user.py
backend/routers/: api.py  music.py  site.py
backend/settings/: __init__.py  base.py  dev.py  local.py  prod.py
frontend/: .eslintrc.js  decs.d.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.module.css  App.tsx  index.css  index.tsx  service-worker.ts  serviceWorkerRegistration.ts
frontend/src/apollo/: index.tsx
frontend/src/components/OAuth/: index.tsx
frontend/src/contexts/: index.ts
frontend/src/hooks/: index.ts
frontend/src/services/: api.ts  mutations.ts  queries.ts  subscriptions.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
(+43 files in other folders)
